Fix dropdown z-index problem

--- a/resources/assets/sass/layouts/app/_navbar.scss
+++ b/resources/assets/sass/layouts/app/_navbar.scss
@@ -102,7 +102,6 @@ nav.custom-navbar {
                 border: none;
                 border-radius: 0;
                 overflow-y: auto;
-                z-index: 99;
 
                 > li {
                     > a {
